Start big task Space (1)