@@ -3,7 +3,7 @@ package javarush.task.task31.task3110.command;
 import javarush.task.task31.task3110.ConsoleHelper;
 import javarush.task.task31.task3110.ZipFileManager;
 
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * Абстрактный класс для калссов которые непосредственно работают с архивом
@@ -13,6 +13,6 @@ import java.nio.file.Path;
 public abstract class ZipCommand implements Command {
     public ZipFileManager getZipFileManager() throws Exception{
         ConsoleHelper.writeMessage("Введите плоный путь файла архива");
-        return new ZipFileManager(Path.of(ConsoleHelper.readString()));
+        return new ZipFileManager(Paths.get(ConsoleHelper.readString()));
     }
 }
